[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/menu/MainMenu.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -328.0
margin_right = 452.0
margin_bottom = 328.0
theme = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -388.5
margin_top = -340.0
margin_right = 388.5
margin_bottom = 340.0
custom_constants/separation = 20

[node name="StartGame" type="Button" parent="VBoxContainer"]
margin_right = 777.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
text = "Start Game"

[node name="Settings" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 777.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
text = "Settings"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 120.0
margin_right = 777.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 1 )
text = "Quit Game"

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
